# ruuudy-mc-launcher

./: .gitignore  PLAN.md  RELEASE.md  docker-compose.yml  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: release.yml
deploy/pack-api/: README.md
deploy/pelican-pack-installer/: Dockerfile  README.md  compose.yml  package.json
deploy/pelican-pack-installer/src/: installer.mjs  paths.mjs  server.mjs
deploy/pelican-pack-installer/tests/: installer.test.ts  server.test.ts
deploy/pelican-plugin/launcher-pack-installer/: README.md  plugin.json
deploy/pelican-plugin/launcher-pack-installer/config/: launcher-pack-installer.php
deploy/pelican-plugin/launcher-pack-installer/database/migrations/: 2026_06_07_000000_create_launcher_pack_installations.php
deploy/pelican-plugin/launcher-pack-installer/src/: LauncherPackInstallerPlugin.php
deploy/pelican-plugin/launcher-pack-installer/src/Jobs/: InstallLauncherPack.php  RollbackLauncherPack.php
docs/superpowers/plans/: 2026-06-07-pelican-pack-installer.md
docs/superpowers/specs/: 2026-06-07-pelican-pack-installer-design.md
server/: README.md  manifest-contract.mjs  manifest-contract.test.ts  manifest-server.mjs  repair-server-pack.mjs  repair-server-pack.test.ts
src/: styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/packs/fakersbob/: manifest.json
src-tauri/src/: lib.rs  main.rs
src/core/: launcherCore.test.ts  manifest.ts  minecraftProfile.ts  updater.test.ts  updater.ts
src/ui/: App.tsx
(+5 files in other folders)
