[package]
name = "ruuudy_mc_launcher"
version = "0.1.5"
description = "Ruuudy Minecraft pack launcher"
authors = ["Ruuudy"]
edition = "2021"

[lib]
name = "ruuudy_mc_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ruuudy_mc_launcher"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "5"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sysinfo = "0.33"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
thiserror = "1"
urlencoding = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
